# CSESp

./: .ruby-version  Dockerfile  Gemfile  README.md  package.json
app/channels/: submit_cli_channel.rb
app/controllers/: class_c_controller.rb  homepage_controller.rb  problem_controller.rb  problem_set_controller.rb  tutorial_autocorreccion_controller.rb
app/helpers/: class_c_helper.rb  problem_set_helper.rb  tutorial_autocorreccion_helper.rb
app/models/: class_c.rb  problem.rb  problem_set.rb  student.rb
app/services/: conversation_problem_helper.rb  problem_solver.rb
config/: application.rb  credentials.yml.enc  database.yml  deploy.yml  routes.rb  tailwind.config.js
config/environments/: development.rb  production.rb  test.rb
db/: schema.rb
db/migrate/: 20250515192141_create_problem_sets.rb  20250515193147_create_problems.rb  20250517111119_add_demo_to_problem.rb  20250517122656_add_order_to_problem_set.rb  20250517123435_create_problems.rb  20250517130013_add_hints_to_problems.rb  20250518175757_add_short_name_to_problem.rb  20250521171619_create_students.rb  20250521175346_add_class_to_students.rb  20250521175535_create_class_cs.rb  20250521175930_add_name_to_class_c.rb
problems_files/creando_caras/: .test_fn.py  caras.py
problems_files/voz_interior/interior_test/: Cargo.toml  interior.py  interior_test
problems_files/voz_interior/interior_test/src/: main.rs
test/channels/: submit_cli_channel_test.rb
test/controllers/: class_c_controller_test.rb  problem_controller_test.rb  problem_set_controller_test.rb  (+1 more)
test/fixtures/: problem_sets.yml  (+1 more)
(+13 files in other folders)
