[package]
name = "interior_test"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
ezsockets = { version = "0.7.0", features = ["client", "rustls"] }
tokio = { version = "1.45.0", features = ["full"] }
url = "2.5.4"
tracing = "0.1.41"
async-trait = "0.1.88"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
